feat(Usuario): adicionar Bean, DAO, MBean e entity para usuário

--- a/src/modulo-09-java/aula5/src/main/resources/messages_pt_BR.properties
+++ b/src/modulo-09-java/aula5/src/main/resources/messages_pt_BR.properties
@@ -46,3 +46,9 @@ login_panel_info=Informe os dados de acesso.
 login_username=Usu\u00e1rio
 login_password=Senha
 login_enviar=Enviar
+
+# Cadastro
+cadastro_title=Cadastro
+cadastro_username=Usu\u00e1rio
+cadastro_password=Senha
+cadastro_registrar=Registrar
